# graph_matching

./: README.md  package.xml  setup.cfg  setup.py
config/: params.yaml  syntheticDS_params.json  syntheticDS_params_synthetic.json
graph_manager/: CMakeLists.txt  Clipper.py  Clustering_trials.py  GraphManager.py  GraphMatcher.py  GraphWrapper.py  graph_manager_node.py  graph_manager_tester_node.py  matching_synthetic_dataset.py  package.xml  setup.cfg  setup.py  utils.py
graph_manager/graph_manager/: Clipper.py  Clustering_trials.py  GraphManager.py  GraphMatcher.py  graph_manager_node.py  graph_manager_tester_node.py  graph_matcher_example.py  graph_matcher_node.py
graph_manager/launch/: graph_manager.launch.py
graph_manager_interface/: CMakeLists.txt  package.xml
graph_manager_interface/msg/: Attribute.msg  Edge.msg  Graph.msg  Node.msg  Sgraph.msg
graph_manager_interface/srv/: SubgraphMatch.srv
graph_matcher/: GraphMatcher.py  matching_synthetic_dataset.py  utils.py
graph_matching/: Clipper.py  GraphMatcher.py  debug_plot_pointnormal.py  debug_tests.py  debug_transformation.py  graph_manager_node.py  graph_manager_tester_node.py  graph_matching_node.py  graph_matching_tester_node.py  matching_synthetic_dataset.py  parameters_grid_search.py  plot_clipper_cost_function.py  utils.py
graph_matching/grid_search/: parameters_grid_search.py
launch/: graph_manager.launch.py  graph_manager_tester.launch.py  graph_matching.launch.py
src/NetworkX/: GraphMatcher.py  GraphMatcherNode.py  example.py  isomorphism.py  tutorial.py
(+1063 files in other folders)
